--- a/.github/workflows/build-kousa.yml
+++ b/.github/workflows/build-kousa.yml
@@ -1,7 +1,7 @@
 name: Build Kousa
 on: [push]
 jobs:
-  login:
+  build_kousa:
     runs-on: ubuntu-latest
     steps:
       -
@@ -20,5 +20,5 @@ jobs:
         uses: docker/build-push-action@v2
         with:
           push: true
-          context: kousa
+          context: ./kousa
           tags: staging
