--- a/.github/workflows/build-kousa.yml
+++ b/.github/workflows/build-kousa.yml
@@ -5,6 +5,9 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       -
+        name: Checkout
+        uses: actions/checkout@v2
+      -
         name: check
         run: ls
       -
